--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
-
-.open-sans-regular {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
-
 *{
     margin: 0;
     padding: 0;
@@ -22,6 +12,14 @@
 
 .dark-2{
     color: #474747;
+}
+
+.open-sans-regular {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 .btn-primary{
@@ -41,6 +39,29 @@
     border: 1px solid #FD6E0A;
 }
 
+.section-title{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 35px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.section-description{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.bg-primary{
+    background-color: rgb(255, 248, 243);
+}
+
+/* Header Styles */
+
 header{
     background-image: url("../assets/developer.png"), url("../assets/header_bg.png");
     background-repeat: no-repeat;
@@ -58,14 +79,13 @@ nav{
 .nav-title{
     font-size: 45px;
     font-weight: 800;
+    color: rgb(24, 24, 24);
 }
 
 nav ul{
     display: flex;
     align-items: center;
 }
-
-
 
 nav ul li{
     list-style: none;
@@ -111,3 +131,41 @@ nav li a{
 .banner-profile-pic{
     width: 584px;
 }
+
+/* Main */
+
+main{
+    max-width: 1150px;
+    max-height: 550px;
+    margin: 0 auto;
+    
+}
+
+/* About */
+
+.about{
+    margin: 0 auto;
+    border-radius: 10px;
+    margin: 130px 0;
+    padding: 130px 230px 0px 230px;
+    text-align: center;
+    
+}
+
+.about-content{
+    max-width: 827px;
+    max-height: 417px;
+    background-color: #fff;
+}
+
+.items-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: rgb(117, 117, 117);
+}
+
+.item-description{
+    font-weight: 700;
+}
+
