--- a/styles/style.css
+++ b/styles/style.css
@@ -46,6 +46,7 @@
     font-weight: 700;
     margin-top: 30px;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .section-description{
@@ -54,6 +55,7 @@
     font-size: 18px;
     font-weight: 400;
     margin-bottom: 30px;
+    text-align: center;
 }
 
 .bg-primary{
@@ -66,6 +68,7 @@ header{
     background-image: url("../assets/developer.png"), url("../assets/header_bg.png");
     background-repeat: no-repeat;
     background-position: top left, bottom right;
+    padding: 0.1px;
 }
 
 /* Nav Styles */
@@ -167,5 +170,49 @@ main{
 
 .item-description{
     font-weight: 700;
+}
+
+/* what-i-do */
+.what-i-do{
+    margin: 130px 0;
+    max-width: 1150px;
+}
+
+.cards-area{
+    display: flex;
+    gap: 24px;
+    text-align: left;
+}
+
+.card-content{
+    width: 267px;
+    height: 377px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    background: rgb(255, 255, 255);
+
+    padding: 0px 30px;
+}
+
+.card-content img{
+    margin: 30px 0;
+}
+
+.card-title{
+    color: rgb(24, 24, 24);
+    font-family: Open Sans;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 27px;
+    margin: 20px 0px;
+}
+
+.card-description{
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
 }
 
