footer section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 /* Shared Styles */
@@ -139,7 +138,6 @@ nav li a{
 
 main{
     max-width: 1150px;
-    max-height: 550px;
     margin: 0 auto;
     
 }
@@ -277,5 +275,62 @@ main{
 
 .resume-button{
     text-align: center;
+    margin-bottom: 130px;
 }
 
+/* Footer Styles */
+
+footer .social{
+    max-width: 1156px;
+    margin: 0 auto;
+    padding: 130px 250px;
+
+    display: flex;
+    gap: 100px;
+}
+
+.connect{
+    max-width: 50%;
+}
+
+footer .section-title{
+    text-align: left;
+}
+
+footer .section-description{
+    color: rgb(71, 71, 71);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+}
+
+footer ul{
+    list-style: none;
+    display: flex;
+    gap: 33px;
+}
+
+footer ul img{
+    width: 35px;
+    height: 35px;
+}
+
+input,
+textarea{
+    display: inline-block;
+    width: 90%;
+    padding: 18px 30px;
+    border-radius: 5px;
+    border: none;
+    margin-top: 20px;
+    color: rgb(117, 117, 117);
+    font-family: Open Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+    text-align: left;
+
+    margin-bottom: 24px;
+}
